# uv-fastapi-production-template

./: .gitignore  .pre-commit-config.yaml  .readmeai_ignore  Dockerfile  README.md  compose.yaml  default.conf  makefile  pyproject.toml  worker.Dockerfile
benchmark/: package-lock.json  package.json
docs/: usecase.md
migrations/: env.py
migrations/versions/: 95b54be933ca_updated_social_account_table.py
src/app/: main.py
src/app/api/v1/: __init__.py
src/app/core/: config.py  send_email.py
src/app/core/db/: database.py
src/app/core/dto/: entity_with_model_dto.py
src/app/core/schemas/: global_value_objects.py
src/app/core/templates/: verify_email_template.html
src/app/crud/: base_crud.py  social_account_crud.py  user_crud.py
src/app/factories/: user_factory.py
src/app/models/: social_account.py  user.py
src/app/schemas/: email_schema.py  global_schemas.py  social_account_schema.py  token_schemas.py  user_schemas.py
src/app/services/: auth_service.py  token_service.py  user_service.py
src/app/usecases/users/: user_registration_service.py
src/app/worker/: celeryconfig.py  listen.py  settings.py  tasks.py
src/utils/: logger.py  logging_formatter.py
tests/: conftest.py
tests/core/schemas/: test_global_value_objects.py
tests/crud/: test_social_account_crud.py  test_user_crud.py
tests/domains/oauth/schemas/: test_oauth_schemas.py
tests/domains/social_account/entities/: test_social_account_entity.py
tests/domains/users/entities/: test_user_entity.py
tests/domains/users/schemas/: test_user_schemas.py
tests/infrastructures/token/services/: token_service.py
tests/routes/: test_auth.py  test_health_check.py  test_user_router.py
tests/schemas/: test_auth_schemas.py
tests/services/: test_token_service.py  test_user_service.py
(+25 files in other folders)
